# notrufzentrale-rs

./: Cargo.toml
src/: handler.rs  main.rs  parse.rs  roll.rs
src/commands/: dice.rs  mod.rs  mussel.rs
src/commands/utils/: mod.rs  parse.rs  roll.rs
