[package]
name = "status-bot"
version = "0.1.0"
authors = ["Philipp Bzdok <philipp.bzdok@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9"
tokio = { version = "0.2", features = ["macros"] }
reqwest = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cmd_lib = "0.7.8"