[package]
name = "notrufzentrale"
version = "0.1.0"
authors = ["Philipp Bzdok <philipp.bzdok@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9"
tokio = { version = "0.2", features = ["macros"] }
reqwest = "0.10.8"
rand = "0.7.3"
regex = "1.4.2"